--- a/pom.xml
+++ b/pom.xml
@@ -5,11 +5,11 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.wch</groupId>
-  <artifactId>SSM_zhenghe</artifactId>
+  <artifactId>SSM_CRUD</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>war</packaging>
 
-  <name>SSM_zhenghe Maven Webapp</name>
+  <name>SSM_CRUD Maven Webapp</name>
   <!-- FIXME change it to the project's website -->
   <url>http://www.example.com</url>
 
